k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 358051303549.dkr.ecr.us-east-1.amazonaws.com/docktor-app/doctor-office-backend:latest
        resources:              # Set resource requests and limits for stable performance and HPA support.
          requests:
            cpu: "100m"         # min CPU requests
            memory: "256Mi"     # min memory requests
          limits:
            cpu: "200m"         # max CPU requests
            memory: "512Mi"     # max memory requests
        ports:
        - containerPort: 3000
        readinessProbe:
            httpGet:
              path: /readiness
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
        livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
