k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 358051303549.dkr.ecr.us-east-1.amazonaws.com/docktor-app/doctor-office-frontend:latest
        resources:  # Set resource requests and limits for stable performance and HPA support.
          requests:
            cpu: "100m"   # min CPU requests
            memory: "256Mi"  # min memory requests
          limits:
            cpu: "200m"   # max CPU requests
            memory: "512Mi"  # max memory requests
        ports:
        - containerPort: 3001
        readinessProbe:
            httpGet:
              path: /readiness
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 15
        livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
